<resources>
    <string name="app_name">RPGStatManager</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name_of_weapon">Name Of Weapon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_move">Name Of Move</string>
    <string name="effect_of_move">Effect Of Move</string>
    <string name="description_of_move">Discription Of Move</string>
    <string name="criteria_of_move">Criteria Of Move</string>
    <string name="weapons">Weapons</string>
    <string name="tools">Tools</string>
    <string name="moves">Moves</string>
    <string-array name="moveType">
        <item> push </item>
        <item> strike </item>
        <item> block </item>
        <item> throw </item>
        <item> move </item>
        <item> dodge </item>
        <item> reaction </item>
        <item> disorient </item>
        <item> target </item>
        <item> search </item>
        <item> force </item>
        <item> reason </item>
        <item> blockout </item>
        <item> remember </item>
        <item> process </item>
        <item> anticipate </item>
        <item> react </item>
        <item> manipulate </item>
        <item> insight </item>
        <item> interpret </item>
    </string-array>
</resources>
