<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.F_Move">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        >
        <EditText
            android:id="@+id/nameOfMove"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:text="@string/name_of_move"
            />
        <Spinner
            android:id="@+id/typeOfMove"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameOfMove"/>
        <EditText
            android:id="@+id/criteriaOfMove"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeOfMove"

            android:text="@string/criteria_of_move"
            />
        <EditText
            android:id="@+id/descriptionOfMove"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/criteriaOfMove"

            android:text="@string/description_of_move"
            />
        <EditText
            android:id="@+id/effectOfMove"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionOfMove"

            android:text="@string/effect_of_move"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>